Get Vim file names to appear in tmux status line
Fiddle with terminal titles to get the currently open file in Vim to be
displayed in the tmux window name in the status line. That way I can
see what's being edited in my other tmux windows, so I don't forget
what's happening where. Likewise for open man pages.

E.g.:
[0] 0:nvim:.tmux.conf  1:man:tmux  2:git- 3:git:COMMIT_EDITMSG*   9:59pm

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,7 +6,8 @@
 # (24-bit) color.
 set-option -ga terminal-overrides xterm-256color:Tc
 
-# Send escape key almost right away when pressed (5 ms).
+# Send escape key (almost) right away when pressed (5 ms).
+# Default is half of a second, which feels way less responsive.
 # When this was set to 0, I occasionally had issues.
 set-option -g escape-time 5
 
@@ -30,26 +31,44 @@ set-option -ga word-separators "'"
 # take about 1 or 2 MB of memory when full.
 set-option -g history-limit 50000
 
-# Show messages in the status line for longer (1.25 seconds).
+# Show messages in the status line for longer (1.25 seconds, default is 0.75).
 set-option -g display-time 1250
 
-# 12-hour time format for `prefix t' time display.
+# 12-hour time format for `prefix t` time display.
 set-window-option -g clock-mode-style 12
 
-# Different color theme on different machines
+# Show the "terminal titles" (when they exist) in the list of window names
+# (i.e. "tabs") in the status bar. Titles are truncated at 16 chars.
+# Titles can sometimes be things like the currently open file in vim (if
+# properly configured) or the remote server in ssh.
+set-window-option -g window-status-format \
+    "#I:#{=16:window_name}#{?pane_title,:#{=16:pane_title},}#{?window_flags,#{window_flags}, }"
+set-window-option -g window-status-current-format \
+    "#I:#{=16:window_name}#{?pane_title,:#{=16:pane_title},}#{?window_flags,#{window_flags}, }"
+
+# Different color theme on different machines.
 %if #{m:kevan-*,#{host}}
-set-option -g status off
-set-option -g status-style fg=brightblack,bg=brightgreen
-set-option -g pane-active-border-style fg=brightgreen
-set-option -g pane-border-style fg=black
-set-option -g status-right '  %l:%M%P'
-#set-option -g status-right ''
+    # My laptop, desktop, etc.
+    # Dark grey; status bar initially hidden.
+    set-option -g status off
+    set-option -g status-style fg=brightblack,bg=brightgreen
+    set-option -g pane-active-border-style fg=brightgreen
+    set-option -g pane-border-style fg=black
+    # 12-hour clock in the status bar; e.g. `12:17pm`.
+    set-option -g status-right '%l:%M%P'
 %endif
 %if #{!=:#{m:kevan-*,#{host}},1}
-set-option -g status-style fg=brightblack,bg=cyan
-set-option -g pane-active-border-style fg=cyan
-set-option -g pane-border-style fg=default
-set-option -g status-right ' "#{=37:pane_title}"'
+    # Anything that's not mine.
+    # Cyan.
+    set-option -g status-style fg=brightblack,bg=cyan
+    set-option -g pane-active-border-style fg=cyan
+    set-option -g pane-border-style fg=default
+    # Display the hostname in the status bar, e.g. `"some-host"`.
+    set-option -g status-right '"#{host}"'
+    # hostnames longer than 32 chars will have their first 33 chars displayed,
+    # and the closing double-quote will get truncated as well, e.g.:
+    #   `"super-long-host-name-blah-blah-bl`
+    set-option -g status-right-length 34
 %endif
 
 # -----------------------------------------------------------------------------
@@ -61,8 +80,11 @@ unbind-key C-b
 set-option -g prefix M-a
 bind-key M-a send-prefix
 
-# Open a tmux command prompt with M-s. Default keybind is `prefix-:'
+# Open a tmux command prompt with M-s. Default keybind is `prefix :`
 bind-key -n M-s command-prompt
+
+# Switch to the previously selected window. Default keybind is `prefix l`
+bind-key / last-window
 
 # Toggle the status bar.
 bind-key -n "M-'" set-option status
