Perform misc. additions, edits, and cleanups
Nothing major.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,31 +41,56 @@ set-window-option -g clock-mode-style 12
 # (i.e. "tabs") in the status bar. Titles are truncated at 16 chars.
 # Titles can sometimes be things like the currently open file in vim (if
 # properly configured) or the remote server in ssh.
+#
+# The #{? ... } expression is to check if #T is nonempty and #W isn't bash, in
+# which case we'll append :#T to the window name.
 set-window-option -g window-status-format \
-    "#I:#{=16:window_name}#{?pane_title,:#{=16:pane_title},}#{?window_flags,#{window_flags}, }"
+    " #{?window_bell_flag,!,}#I:#{=16:window_name}#{?#{&&:#{!=:#T,},#{!=:#W,bash}},:#{=16:pane_title},} "
 set-window-option -g window-status-current-format \
-    "#I:#{=16:window_name}#{?pane_title,:#{=16:pane_title},}#{?window_flags,#{window_flags}, }"
+    " #{?window_bell_flag,!,}#I:#{=16:window_name}#{?#{&&:#{!=:#T,},#{!=:#W,bash}},:#{=16:pane_title},} "
+
+# There's whitespace in the above strings, so we can remove it from these ones.
+# (I moved the spaces into the above settings so that the background-highlight
+# for the active-window-name includes one space on either side of the name.)
+set-window-option -g window-status-separator ""
+set-option -g status-left "[#S]"
 
 # Different color theme on different machines.
 %if #{m:kevan-*,#{host}}
     # My laptop, desktop, etc.
-    # Dark grey; status bar initially hidden.
+
+    # Status bar initially hidden.
     set-option -g status off
+
+    # Dark grey.
     set-option -g status-style fg=brightblack,bg=brightgreen
     set-option -g pane-active-border-style fg=brightgreen
     set-option -g pane-border-style fg=black
+    # Invert colors for the active window name, to "highlight" the tab.
+    set-option -g window-status-current-style fg=brightgreen,bg=brightblack
+
+    # Light grey, for light terminal backgrounds.
+    #set-option -g status-style fg=brightblack,bg=brightcyan
+    #set-option -g pane-active-border-style fg=brightcyan
+    #set-option -g pane-border-style fg=white
+    #set-option -g window-status-current-style fg=brightcyan,bg=brightblack
+
     # 12-hour clock in the status bar; e.g. `12:17pm`.
     set-option -g status-right '%l:%M%P'
 %endif
 %if #{!=:#{m:kevan-*,#{host}},1}
     # Anything that's not mine.
+
     # Cyan.
     set-option -g status-style fg=brightblack,bg=cyan
     set-option -g pane-active-border-style fg=cyan
     set-option -g pane-border-style fg=default
+    set-option -g window-status-current-style fg=cyan,bg=brightblack
+
     # Display the hostname in the status bar, e.g. `"some-host"`.
     set-option -g status-right '"#{host}"'
-    # hostnames longer than 32 chars will have their first 33 chars displayed,
+
+    # Host names longer than 32 chars will have their first 33 chars displayed,
     # and the closing double-quote will get truncated as well, e.g.:
     #   `"super-long-host-name-blah-blah-bl`
     set-option -g status-right-length 34
