Change a color in .tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -73,7 +73,7 @@ set-option -g status-left "[#S]"
     #set-option -g status-style fg=brightblack,bg=brightcyan
     #set-option -g pane-active-border-style fg=brightcyan
     #set-option -g pane-border-style fg=white
-    #set-option -g window-status-current-style fg=brightcyan,bg=brightblack
+    #set-option -g window-status-current-style fg=brightcyan,bg=black
 
     # 12-hour clock in the status bar; e.g. `12:17pm`.
     set-option -g status-right '%l:%M%P'
