Tiny misc changes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -56,7 +56,7 @@ set-window-option -g window-status-separator ""
 set-option -g status-left "[#S]"
 
 # Different color theme on different machines.
-%if #{m:kevan-*,#{host}}
+%if #{||:#{m:kevan-*,#{host}},#{m:*-lt,#{host}}}
     # My laptop, desktop, etc.
 
     # Status bar initially hidden.
@@ -70,18 +70,20 @@ set-option -g status-left "[#S]"
     set-option -g window-status-current-style fg=brightgreen,bg=brightblack
 
     # Light grey, for light terminal backgrounds.
-    set-option -g status-style fg=brightgreen,bg=white
-    set-option -g pane-active-border-style fg=brightcyan
-    set-option -g pane-border-style fg=white
-    set-option -g window-status-current-style fg=brightwhite,bg=brightblue
+    #set-option -g status-style fg=brightgreen,bg=white
+    #set-option -g pane-active-border-style fg=brightcyan
+    #set-option -g pane-border-style fg=white
+    #set-option -g window-status-current-style fg=brightwhite,bg=brightblue
 
     # 12-hour clock in the status bar; e.g. `12:17pm`.
     set-option -g status-right '%l:%M%P'
 %endif
-%if #{!=:#{m:kevan-*,#{host}},1}
-    # Anything that's not mine.
+# NOTE: There are no "else" statements, so this is the negation of the  above.
+%if #{!=:1,#{||:#{m:kevan-*,#{host}},#{m:*-lt,#{host}}}}
+    # Use a different colorscheme for all other machines. This is useful to
+    # tell apart an ssh session from a local shell.
 
-    # Cyan.
+    # Cyan!
     set-option -g status-style fg=brightblack,bg=cyan
     set-option -g pane-active-border-style fg=cyan
     set-option -g pane-border-style fg=default
