--- a/.config/i3/config
+++ b/.config/i3/config
@@ -9,7 +9,7 @@ bindsym Control+$Alt+Delete exec --no-startup-id xflock4
 bindsym Print exec xfce4-screenshooter
 bindsym $Win+Return exec xfce4-terminal
 bindsym $Win+i exec "xfce4-terminal --execute tmux_attach"
-bindsym $Win+o exec chromium
+bindsym $Win+o exec "exo-open --launch WebBrowser"
 bindsym $Win+p exec --no-startup-id xfce4-popup-whiskermenu
 bindsym $Win+u exec "xfce4-terminal --execute tmux new-session tmux_nvim"
 bindsym $Win+y exec "xfce4-terminal --execute tmux new-session ranger"
