--- a/.tmux.conf
+++ b/.tmux.conf
@@ -70,10 +70,10 @@ set-option -g status-left "[#S]"
     set-option -g window-status-current-style fg=brightgreen,bg=brightblack
 
     # Light grey, for light terminal backgrounds.
-    set-option -g status-style fg=brightgreen,bg=white
-    set-option -g pane-active-border-style fg=brightcyan
-    set-option -g pane-border-style fg=white
-    set-option -g window-status-current-style fg=brightwhite,bg=brightblue
+    #set-option -g status-style fg=brightgreen,bg=white
+    #set-option -g pane-active-border-style fg=brightcyan
+    #set-option -g pane-border-style fg=white
+    #set-option -g window-status-current-style fg=brightwhite,bg=brightblue
 
     # 12-hour clock in the status bar; e.g. `12:17pm`.
     set-option -g status-right '%l:%M%P'
