--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,6 +26,12 @@ set-option -g mode-keys vi
 set-option -g word-separators ' !"#$%&()*+,-./:;<=>?@[\]^`{|}+~'
 set-option -ga word-separators "'"
 
+# Invert colors for the active window name, to "highlight" the tab.
+set-option -g window-status-current-style reverse
+
+# Bold window name when a bell rings in another window.
+set-option -g window-status-bell-style bold
+
 # Keep way more history.
 # With 50,000 lines of history per pane, you can expect each pane's history to
 # take about 1 or 2 MB of memory when full.
@@ -66,14 +72,11 @@ set-option -g status-left "[#S]"
     set-option -g status-style fg=brightblack,bg=brightgreen
     set-option -g pane-active-border-style fg=brightgreen
     set-option -g pane-border-style fg=black
-    # Invert colors for the active window name, to "highlight" the tab.
-    set-option -g window-status-current-style fg=brightgreen,bg=brightblack
 
     # Light grey, for light terminal backgrounds.
     #set-option -g status-style fg=brightgreen,bg=white
     #set-option -g pane-active-border-style fg=brightcyan
     #set-option -g pane-border-style fg=white
-    #set-option -g window-status-current-style fg=brightwhite,bg=brightblue
 
     # 12-hour clock in the status bar; e.g. `12:17pm`.
     set-option -g status-right '%l:%M%P'
@@ -87,7 +90,6 @@ set-option -g status-left "[#S]"
     set-option -g status-style fg=brightblack,bg=cyan
     set-option -g pane-active-border-style fg=cyan
     set-option -g pane-border-style fg=default
-    set-option -g window-status-current-style fg=cyan,bg=brightblack
 
     # Display the hostname in the status bar, e.g. `"some-host"`.
     set-option -g status-right '"#{host}"'
@@ -147,7 +149,7 @@ bind-key -n M-J resize-pane -D 5
 bind-key -n M-K resize-pane -U 5
 bind-key -n M-L resize-pane -R 5
 
-# Split current pane
+# Split current pane.
 bind-key h split-window -c "#{pane_current_path}" -h \; swap-pane -U
 bind-key j split-window -c "#{pane_current_path}"
 bind-key k split-window -c "#{pane_current_path}" \; swap-pane -U
@@ -158,6 +160,18 @@ bind-key M-h swap-pane -d -t {left-of}
 bind-key M-j swap-pane -d -t {down-of}
 bind-key M-k swap-pane -d -t {up-of}
 bind-key M-l swap-pane -d -t {right-of}
+
+# Select window by number.
+bind-key -n M-0 select-window -t 0
+bind-key -n M-1 select-window -t 1
+bind-key -n M-2 select-window -t 2
+bind-key -n M-3 select-window -t 3
+bind-key -n M-4 select-window -t 4
+bind-key -n M-5 select-window -t 5
+bind-key -n M-6 select-window -t 6
+bind-key -n M-7 select-window -t 7
+bind-key -n M-8 select-window -t 8
+bind-key -n M-9 select-window -t 9
 
 
 
