Git aliases, mostly

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -62,7 +62,8 @@ set-window-option -g window-status-separator ""
 set-option -g status-left "[#S]"
 
 # Different color theme on different machines.
-%if #{||:#{m:kevan-*,#{host}},#{m:*-lt,#{host}}}
+#%if #{||:#{m:kevan-*,#{host}},#{m:*-lt,#{host}}}
+%if 1
     # My laptop, desktop, etc.
 
     # Status bar initially hidden.
@@ -79,12 +80,16 @@ set-option -g status-left "[#S]"
     #set-option -g pane-border-style fg=white
 
     # 12-hour clock in the status bar; e.g. `12:17pm`.
-    set-option -g status-right '%l:%M%P'
+    #set-option -g status-right '%l:%M%P'
+    set-option -g status-right ''
 %endif
 # NOTE: There are no "else" statements, so this is the negation of the  above.
-%if #{!=:1,#{||:#{m:kevan-*,#{host}},#{m:*-lt,#{host}}}}
+#%if #{!=:1,#{||:#{m:kevan-*,#{host}},#{m:*-lt,#{host}}}}
+%if 0
     # Use a different colorscheme for all other machines. This is useful to
     # tell apart an ssh session from a local shell.
+    # TODO: is there a better way to tell if I'm remote than comparing against
+    # a hard-coded hostname?
 
     # Cyan!
     set-option -g status-style fg=brightblack,bg=cyan
