--- a/.tmux.conf
+++ b/.tmux.conf
@@ -167,6 +167,7 @@ bind-key M-k swap-pane -d -t {up-of}
 bind-key M-l swap-pane -d -t {right-of}
 
 # Select window by number.
+# TODO: get window ids to start from 1, and rebind 0 to select id 10.
 bind-key -n M-0 select-window -t 0
 bind-key -n M-1 select-window -t 1
 bind-key -n M-2 select-window -t 2
