--- a/.tmux.conf
+++ b/.tmux.conf
@@ -136,6 +136,10 @@ bind-key ! set-option status on \; break-pane
 bind-key -n PageUp copy-mode -eu
 bind-key -n PageDown run-shell true  # Do nothing when in normal mode.
 
+# Toggle fullscreen ("zoom") for the current pane.
+# TODO: add some sort of visual indicator to show when this is enabled.
+bind-key -n M-z resize-pane -Z
+
 
 
 # Switch windows
