tmux configs: move panes between windows

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,21 +21,13 @@ set-option -g status-keys emacs
 # Use vi-style keybindings in copy mode.
 set-option -g mode-keys vi
 
-# Make the word separators used for `w` motion more Vim-like;
-# ie, everything but `_`.
+# Make the word separators used for `w` motion more Vim-like; ie, everything
+# but `_`.
 set-option -g word-separators ' !"#$%&()*+,-./:;<=>?@[\]^`{|}+~'
 set-option -ga word-separators "'"
 
-# Invert colors for the active window name, to "highlight" the tab.
-set-option -g window-status-current-style reverse
-
-# Bold window name when a bell rings in another window.
-set-option -g window-status-bell-style bold
-
-# Keep way more history.
-# With 50,000 lines of history per pane, you can expect each pane's history to
-# take about 1 or 2 MB of memory when full.
-set-option -g history-limit 50000
+# Keep way more history. 100,000 lines shouldn't be more than a few MB.
+set-option -g history-limit 100000
 
 # Show messages in the status line for longer (1.25 seconds, default is 0.75).
 set-option -g display-time 1250
@@ -43,17 +35,25 @@ set-option -g display-time 1250
 # 12-hour time format for `prefix t` time display.
 set-window-option -g clock-mode-style 12
 
+# Start window numbers from 1.
+set-option -g base-index 1
+
+# Invert colors for the active window name, to "highlight" the tab.
+set-option -g window-status-current-style reverse
+
+# Bold window name when a bell rings in another window.
+set-option -g window-status-bell-style bold
+
 # Show the "terminal titles" (when they exist) in the list of window names
 # (i.e. "tabs") in the status bar. Titles are truncated at 16 chars.
 # Titles can sometimes be things like the currently open file in vim (if
 # properly configured) or the remote server in ssh.
-#
-# The #{? ... } expression is to check if #T is nonempty and #W isn't bash, in
-# which case we'll append :#T to the window name.
+SHOW_TERMTITLE="#{&&:#{!=:#T,},#{!=:#W,bash}}"
+WINDOW_STATUS_FORMAT="#{?window_bell_flag,!,}#I:#{=16:window_name}#{?$SHOW_TERMTITLE,:#{=16:pane_title},}"
 set-window-option -g window-status-format \
-    " #{?window_bell_flag,!,}#I:#{=16:window_name}#{?#{&&:#{!=:#T,},#{!=:#W,bash}},:#{=16:pane_title},} "
+    " #{?window_zoomed_flag,#[fg=red]z#[default],}$WINDOW_STATUS_FORMAT "
 set-window-option -g window-status-current-format \
-    " #{?window_bell_flag,!,}#I:#{=16:window_name}#{?#{&&:#{!=:#T,},#{!=:#W,bash}},:#{=16:pane_title},} "
+    " #{?window_zoomed_flag,#[bg=red]z#[default],}$WINDOW_STATUS_FORMAT "
 
 # There's whitespace in the above strings, so we can remove it from these ones.
 # (I moved the spaces into the above settings so that the background-highlight
@@ -61,11 +61,22 @@ set-window-option -g window-status-current-format \
 set-window-option -g window-status-separator ""
 set-option -g status-left "[#S]"
 
-# Different color theme on different machines.
-#%if #{||:#{m:kevan-*,#{host}},#{m:*-lt,#{host}}}
-%if 1
-    # My laptop, desktop, etc.
+# 12-hour clock in the status bar.
+set-option -g status-right ' %l:%M%P '
 
+# Different color theme on different machines.
+%if 1  # Unknown machine; most likely a remote connection.
+    # Status bar initially shown.
+    set-option -g status on
+
+    # Cyan!
+    set-option -g status-style fg=brightblack,bg=cyan
+    set-option -g pane-active-border-style fg=cyan
+    set-option -g pane-border-style fg=default
+%endif
+# There are no else statements, so the above is the "else" block to this "if".
+# (Both run, but these later settings overwrite the previous ones.)
+%if #{||:#{||:#{m:kevan-*,#{host}},#{m:*-lt,#{host}}},#{m:*-dt,#{host}}}
     # Status bar initially hidden.
     set-option -g status off
 
@@ -78,31 +89,6 @@ set-option -g status-left "[#S]"
     #set-option -g status-style fg=brightgreen,bg=white
     #set-option -g pane-active-border-style fg=brightcyan
     #set-option -g pane-border-style fg=white
-
-    # 12-hour clock in the status bar; e.g. `12:17pm`.
-    #set-option -g status-right '%l:%M%P'
-    set-option -g status-right ''
-%endif
-# NOTE: There are no "else" statements, so this is the negation of the  above.
-#%if #{!=:1,#{||:#{m:kevan-*,#{host}},#{m:*-lt,#{host}}}}
-%if 0
-    # Use a different colorscheme for all other machines. This is useful to
-    # tell apart an ssh session from a local shell.
-    # TODO: is there a better way to tell if I'm remote than comparing against
-    # a hard-coded hostname?
-
-    # Cyan!
-    set-option -g status-style fg=brightblack,bg=cyan
-    set-option -g pane-active-border-style fg=cyan
-    set-option -g pane-border-style fg=default
-
-    # Display the hostname in the status bar, e.g. `"some-host"`.
-    set-option -g status-right '"#{host}"'
-
-    # Host names longer than 32 chars will have their first 33 chars displayed,
-    # and the closing double-quote will get truncated as well, e.g.:
-    #   `"super-long-host-name-blah-blah-bl`
-    set-option -g status-right-length 34
 %endif
 
 # -----------------------------------------------------------------------------
@@ -117,9 +103,6 @@ bind-key M-a send-prefix
 # Open a tmux command prompt with M-s. Default keybind is `prefix :`
 bind-key -n M-s command-prompt
 
-# Switch to the previously selected window. Default keybind is `prefix l`
-bind-key / last-window
-
 # Toggle the status bar.
 bind-key -n "M-'" set-option status
 
@@ -131,20 +114,15 @@ bind-key c set-option status on \; new-window -c "#{pane_current_path}"
 bind-key ! set-option status on \; break-pane
 
 # Bind page-up to "enter copy mode and go back one page", and then auto-exit
-# copy-mode upon paging to the bottom.
-# Basically, make page-up/page-down behave as expected.
+# copy-mode upon paging to the bottom. Basically, make page-up/page-down behave
+# as expected.
 bind-key -n PageUp copy-mode -eu
 bind-key -n PageDown run-shell true  # Do nothing when in normal mode.
 
 # Toggle fullscreen ("zoom") for the current pane.
-# TODO: add some sort of visual indicator to show when this is enabled.
 bind-key -n M-z resize-pane -Z
 
 
-
-# Switch windows
-bind-key -n M-, previous-window
-bind-key -n M-\; next-window
 
 # Switch panes.
 bind-key -n M-h select-pane -L
@@ -170,9 +148,13 @@ bind-key M-j swap-pane -d -t {down-of}
 bind-key M-k swap-pane -d -t {up-of}
 bind-key M-l swap-pane -d -t {right-of}
 
+
+
+# Switch windows
+bind-key -n M-, previous-window
+bind-key -n M-\; next-window
+
 # Select window by number.
-# TODO: get window ids to start from 1, and rebind 0 to select id 10.
-bind-key -n M-0 select-window -t 0
 bind-key -n M-1 select-window -t 1
 bind-key -n M-2 select-window -t 2
 bind-key -n M-3 select-window -t 3
@@ -182,8 +164,36 @@ bind-key -n M-6 select-window -t 6
 bind-key -n M-7 select-window -t 7
 bind-key -n M-8 select-window -t 8
 bind-key -n M-9 select-window -t 9
+bind-key -n M-0 select-window -t 10
+
+# Move current pane to target window.
+bind-key -n M-! join-pane -t :1
+bind-key -n M-@ join-pane -t :2
+bind-key -n "M-#" join-pane -t :3
+bind-key -n 'M-$' join-pane -t :4
+bind-key -n M-% join-pane -t :5
+bind-key -n M-^ join-pane -t :6
+bind-key -n M-& join-pane -t :7
+bind-key -n M-* join-pane -t :8
+bind-key -n M-( join-pane -t :9
+bind-key -n M-) join-pane -t :10
+
+# Rename current window.
+bind-key 1 move-window -t 1
+bind-key 2 move-window -t 2
+bind-key 3 move-window -t 3
+bind-key 4 move-window -t 4
+bind-key 5 move-window -t 5
+bind-key 6 move-window -t 6
+bind-key 7 move-window -t 7
+bind-key 8 move-window -t 8
+bind-key 9 move-window -t 9
+bind-key 0 move-window -t 10
 
 
+
+# Move the current window to a different session.
+bind-key -n M-m command-prompt -p 'Session to move window to:' 'move-window -t %%:'
 
 # Save the current pane's history to a file, including color escape sequences.
 bind-key y command-prompt -p 'Save history to filename:' -I '~/tmux-history' \
