Rebind tmux copy/paste

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -103,15 +103,30 @@ bind-key M-a send-prefix
 # Open a tmux command prompt with M-s. Default keybind is `prefix :`
 bind-key -n M-s command-prompt
 
+# Copy / paste. (Paste from the system clipboard!)
+bind-key -n M-c copy-mode
+bind-key -n M-v run-shell \
+    "command -v xclip > /dev/null && \
+     (xclip -out -selection clipboard | tmux load-buffer -); \
+     tmux paste-buffer"
+# Unlearn muscle memory for `prefix [` and `prefix ]`.
+# TODO: Make this run sl in a new pane (window?) and then close it.
+bind-key [ run-shell true
+bind-key ] run-shell true
+
 # Toggle the status bar.
 bind-key -n "M-'" set-option status
 
 # Launch new windows in the same directory as the current pane
 # Also, unhide the status line whenever you create a new window.
-bind-key c set-option status on \; new-window -c "#{pane_current_path}"
+# Rebind to M-i instead of `prefix c`.
+bind-key -n M-i set-option status on \; new-window -c "#{pane_current_path}"
+bind-key c run-shell true
 
 # Unhide the status line when you break a pane into its own window.
-bind-key ! set-option status on \; break-pane
+# Also, rebind this action to M-x instead of `prefix shift 1`.
+bind-key -n M-x set-option status on \; break-pane
+bind-key ! run-shell true
 
 # Bind page-up to "enter copy mode and go back one page", and then auto-exit
 # copy-mode upon paging to the bottom. Basically, make page-up/page-down behave
@@ -216,6 +231,8 @@ bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi C-e send-keys -X -N 5 scroll-down
 bind-key -T copy-mode-vi C-y send-keys -X -N 5 scroll-up
 
+# TODO: make { and } copy-mode binds not move the screen around.
+
 # Home and end keys
 bind-key -T copy-mode-vi Home send-keys -X back-to-indentation
 bind-key -T copy-mode-vi End send-keys -X end-of-line
@@ -225,21 +242,8 @@ bind-key -T copy-mode-vi Enter \
     send-keys -X copy-pipe-and-cancel \
     "command -v xclip && xclip -in -selection clipboard || tmux load-buffer -"
 
-# Paste from the system clipboard by default.
-bind-key ] run-shell \
-    "command -v xclip > /dev/null && \
-     (xclip -out -selection clipboard | tmux load-buffer -); \
-     tmux paste-buffer"
-
-# Yank the selection (to the system clipboard), without leaving copy mode.
-# The `copy-pipe` command is a little buggy for me; it garbles the text on
-# the screen when called. (I also have the same issue with `copy-selection`.)
-bind-key -T copy-mode-vi y \
-    send-keys -X copy-pipe \
-    "command -v xclip && xclip -in -selection clipboard || tmux load-buffer -"
-
 # Yank the current line, without the trailing newline.
-bind-key -T copy-mode-vi Y \
+bind-key -T copy-mode-vi y \
     send-keys -X select-line \; \
     send-keys -X copy-pipe-and-cancel "tr -d '\n' | \
     (command -v xclip && xclip -in -selection clipboard || tmux load-buffer -)"
@@ -250,3 +254,10 @@ bind-key -T copy-mode-vi D \
     send-keys -X end-of-line \; \
     send-keys -X copy-pipe-and-cancel "tr -d '\n' | \
     (command -v xclip && xclip -in -selection clipboard || tmux load-buffer -)"
+
+# Yank the selection (to the system clipboard), without leaving copy mode.
+# The `copy-pipe` command is a little buggy for me; it garbles the text on
+# the screen when called. (I also have the same issue with `copy-selection`.)
+bind-key -T copy-mode-vi c \
+    send-keys -X copy-pipe \
+    "command -v xclip && xclip -in -selection clipboard || tmux load-buffer -"
